@@ -13,6 +13,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7566: Implement os.path.sameopenfile for Windows.
+
 - Issue #9293: I/O streams now raise ``io.UnsupportedOperation`` when an
   unsupported operation is attempted (for example, writing to a file open
   only for reading).
